--- a/chat/app/pubspec.yaml
+++ b/chat/app/pubspec.yaml
@@ -18,13 +18,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   # Uncomment the next line to compile the web version
   # js: ^0.6.2
-  url_launcher: ^6.0.20
-  flutter_tts: ^3.3.3
+  url_launcher: ^6.1.10
+  flutter_tts: ^3.6.3
   flutter:
     sdk: flutter
 
