--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,9 +1,9 @@
-name: web
-description: Web app.
+name: glowby
+description: Glowby app.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -15,24 +15,23 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.9.0+1
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
+  sdk: ">=2.19.5 <3.0.0"
 
 dependencies:
   # Uncomment the next line to compile the web version
   js: ^0.6.7
-  url_launcher: ^6.1.12
-  flutter_tts: ^3.7.0
-  http: ^0.13.5
-  shared_preferences: ^2.2.0
-  flutter_secure_storage: ^8.0.0
-  file_picker: ^5.3.2
-  
+  url_launcher: ^6.2.1
+  flutter_tts: ^3.8.3
+  http: ^1.1.0
+  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
+  file_picker: ^6.1.1
+
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,7 +51,6 @@ flutter_icons:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -60,8 +58,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/talk.glowbom
-     - assets/glowbom.png
+    - assets/talk.glowbom
+    - assets/glowbom.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
