--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
   file_picker: ^6.1.1
+  image: ^4.1.3
+  flutter_image_compress: ^2.1.0
 
   flutter:
     sdk: flutter
