--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   file_picker: ^6.1.1
   flutter_image_compress: ^2.1.0
+  path_provider: ^2.1.2
 
   flutter:
     sdk: flutter
