--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,12 +24,12 @@ dependencies:
   # Uncomment the next line to compile the web version
   js: ^0.6.7
   url_launcher: ^6.2.5
-  flutter_tts: ^3.8.5
+  flutter_tts: ^4.0.2
   http: ^1.2.1
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
-  file_picker: ^6.2.0
-  flutter_image_compress: ^2.1.0
+  file_picker: ^8.0.0+1
+  flutter_image_compress: ^2.2.0
   path_provider: ^2.1.2
   flutter_highlight: ^0.7.0
   webview_flutter: ^4.7.0
