--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.9.0+1
+version: 2.0.0
 
 environment:
   sdk: ">=2.19.5 <3.0.0"
@@ -23,26 +23,23 @@ environment:
 dependencies:
   # Uncomment the next line to compile the web version
   js: ^0.6.7
-  url_launcher: ^6.2.5
+  url_launcher: ^6.2.6
   flutter_tts: ^4.0.2
   http: ^1.2.1
-  shared_preferences: ^2.2.2
-  flutter_secure_storage: ^9.0.0
-  file_picker: ^8.0.0+1
-  flutter_image_compress: ^2.2.0
-  path_provider: ^2.1.2
+  shared_preferences: ^2.2.3
+  flutter_secure_storage: ^9.2.1
+  file_picker: ^8.0.3
+  flutter_image_compress: ^2.3.0
+  path_provider: ^2.1.3
   flutter_highlight: ^0.7.0
   webview_flutter: ^4.7.0
-  flutter_lints: ^3.0.1
-  image_picker: ^1.0.7
+  flutter_lints: ^4.0.0
+  image_picker: ^1.1.1
+  cupertino_icons: ^1.0.8
   async: any
 
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
